# FusionCut

./: Cargo.toml  Makefile  README.md
apps/editor/: Cargo.toml
apps/editor/src/: main.rs
crates/app_runtime/: Cargo.toml
crates/app_runtime/src/: assets.rs  lib.rs  option.rs  windows.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/app_state/: mod.rs
crates/core/src/i18n/: en.toml  mod.rs  zh-cn.toml
crates/ui/: Cargo.toml
crates/ui/src/: init.rs  lib.rs  theme.rs
crates/ui/src/components/: mod.rs
crates/ui/src/components/top_bar/: mod.rs  operation_bar.rs  top_view.rs
crates/ui/src/pages/: mod.rs
crates/ui/src/pages/edit_page/: edit_page.rs  mod.rs  view.rs
crates/ui/src/pages/edit_page/components/: assets_viewer.rs  mod.rs  video_viewer.rs
