[workspace]
resolver = "2"
members = [
    # Apps
    "apps/editor",
    # Crates
    "crates/ui",
    "crates/app_runtime",
    "crates/core",
]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
#
# Third-party Crates
#
gpui = { version = "*" }
gpui-component = { version = "0.4.0-preview2" }
anyhow = "1.0"
serde = "1.0"
locale_config = "0.3"
toml = "0.9.8"
#
# Workspace member Crates
#
fusion-cut-ui = { path = "crates/ui" }
fusion-cut-app-runtime = { path = "crates/app_runtime" }
fusion-cut-core = { path = "crates/core" }
