[package]
name = "fusion-cut-app-runtime"
version = "0.1.0"
edition.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
anyhow = { workspace = true }
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path"] }

fusion-cut-ui = { workspace = true }
fusion-cut-core = { workspace = true }
