[package]
name = "fusion-cut-ui"
version = "0.1.0"
edition.workspace = true

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui_util = { workspace = true }
gpui-video-player = { workspace = true }
anyhow = { workspace = true }
url = "2.5.7"

fusion-cut-core = { workspace = true }
